# excavator_arm_obstacle_avoidance

./: .gitignore  README.md  pointcloud_xyzrgba_noise.txt
arm_control/: CMakeLists.txt  package.xml
motion_planning/: CMakeLists.txt  package.xml
perception/: CMakeLists.txt  cloud_plane.pcd  fusion.sh  make.sh  pcl_RANSAC.cpp  plane_3.pcd  plane_5.pcd  plane_6.pcd  plane_7.pcd  plane_8.pcd  plane_9.pcd  readme.md  realsense_calibration.py  rest_1.pcd  rest_2.pcd  rest_3.pcd  rest_4.pcd  rest_5.pcd  rest_6.pcd  rest_7.pcd  rest_8.pcd  rest_9.pcd  segVis.sh
perception/dataset/: aligned_color_frame_metadata_1.csv  aligned_color_frame_metadata_10.csv  aligned_color_frame_metadata_11.csv  aligned_color_frame_metadata_12.csv  aligned_color_frame_metadata_13.csv  aligned_color_frame_metadata_14.csv  aligned_color_frame_metadata_2.csv  aligned_color_frame_metadata_3.csv  aligned_color_frame_metadata_4.csv  aligned_color_frame_metadata_5.csv  aligned_color_frame_metadata_6.csv  aligned_color_frame_metadata_7.csv  aligned_color_frame_metadata_8.csv  aligned_color_frame_metadata_9.csv  aligned_depth_frame_metadata_1.csv  aligned_depth_frame_metadata_11.csv  aligned_depth_frame_metadata_12.csv  aligned_depth_frame_metadata_5.csv  aligned_depth_frame_metadata_7.csv  before_depth_frame_metadata_10.csv  before_depth_frame_metadata_13.csv  before_depth_frame_metadata_14.csv  before_depth_frame_metadata_2.csv  before_depth_frame_metadata_3.csv  before_depth_frame_metadata_4.csv  before_depth_frame_metadata_6.csv  before_depth_frame_metadata_8.csv  before_depth_frame_metadata_9.csv
perception/dataset/headset/: aligned_color_frame_metadata_1.csv  aligned_color_frame_metadata_10.csv  aligned_color_frame_metadata_11.csv  aligned_color_frame_metadata_12.csv  aligned_color_frame_metadata_13.csv  aligned_color_frame_metadata_14.csv  aligned_color_frame_metadata_2.csv  aligned_color_frame_metadata_3.csv  aligned_color_frame_metadata_4.csv  aligned_color_frame_metadata_5.csv  aligned_color_frame_metadata_6.csv  aligned_color_frame_metadata_7.csv  aligned_color_frame_metadata_8.csv  aligned_color_frame_metadata_9.csv  aligned_depth_frame_metadata_11.csv  aligned_depth_frame_metadata_12.csv  aligned_depth_frame_metadata_14.csv  aligned_depth_frame_metadata_2.csv  aligned_depth_frame_metadata_3.csv  aligned_depth_frame_metadata_4.csv  aligned_depth_frame_metadata_6.csv  aligned_depth_frame_metadata_8.csv  before_depth_frame_metadata_1.csv  before_depth_frame_metadata_10.csv  before_depth_frame_metadata_13.csv  before_depth_frame_metadata_5.csv  before_depth_frame_metadata_7.csv  before_depth_frame_metadata_9.csv
perception/dataset/headset-right/: aligned_color_frame_metadata_1.csv  aligned_color_frame_metadata_2.csv  aligned_color_frame_metadata_3.csv  aligned_depth_frame_metadata_2.csv  before_depth_frame_metadata_1.csv  before_depth_frame_metadata_3.csv
perception/dataset/test_stone1/: aligned_color_frame_metadata_1.csv  aligned_color_frame_metadata_10.csv  aligned_color_frame_metadata_11.csv  aligned_color_frame_metadata_12.csv  aligned_color_frame_metadata_13.csv  aligned_color_frame_metadata_14.csv  aligned_color_frame_metadata_2.csv  aligned_color_frame_metadata_3.csv  aligned_color_frame_metadata_4.csv  aligned_color_frame_metadata_5.csv  aligned_color_frame_metadata_6.csv  aligned_color_frame_metadata_7.csv  aligned_color_frame_metadata_8.csv  aligned_color_frame_metadata_9.csv  aligned_depth_frame_metadata_1.csv  aligned_depth_frame_metadata_12.csv  aligned_depth_frame_metadata_2.csv  aligned_depth_frame_metadata_3.csv  aligned_depth_frame_metadata_4.csv  aligned_depth_frame_metadata_6.csv  aligned_depth_frame_metadata_8.csv  before_depth_frame_metadata_10.csv  before_depth_frame_metadata_11.csv  before_depth_frame_metadata_13.csv  before_depth_frame_metadata_14.csv  before_depth_frame_metadata_5.csv  before_depth_frame_metadata_7.csv  before_depth_frame_metadata_9.csv
perception/dataset/toolset/: aligned_color_frame_metadata_1.csv  aligned_color_frame_metadata_10.csv  aligned_color_frame_metadata_11.csv  aligned_color_frame_metadata_12.csv  aligned_color_frame_metadata_13.csv  aligned_color_frame_metadata_14.csv  aligned_color_frame_metadata_2.csv  aligned_color_frame_metadata_3.csv  aligned_color_frame_metadata_4.csv  aligned_color_frame_metadata_5.csv  aligned_color_frame_metadata_6.csv  aligned_color_frame_metadata_7.csv  aligned_color_frame_metadata_8.csv  aligned_color_frame_metadata_9.csv  aligned_depth_frame_metadata_10.csv  aligned_depth_frame_metadata_11.csv  aligned_depth_frame_metadata_13.csv  aligned_depth_frame_metadata_3.csv  aligned_depth_frame_metadata_4.csv  aligned_depth_frame_metadata_5.csv  aligned_depth_frame_metadata_7.csv  aligned_depth_frame_metadata_8.csv  aligned_depth_frame_metadata_9.csv  before_depth_frame_metadata_1.csv  before_depth_frame_metadata_12.csv  before_depth_frame_metadata_14.csv  before_depth_frame_metadata_2.csv  before_depth_frame_metadata_6.csv
perception/fusionResult/: plane_2.pcd
perception/pc_color/: CMakeLists.txt  pc_color.cpp
perception/pc_fusion/: CMakeLists.txt  pc_fusion.cpp
perception/pc_saver/: CMakeLists.txt  kbhit.hpp  pc_saver.cpp
perception/result/: add_cloud.pcd  cloud_plane.pcd
perception/segResult/: plane1.pcd  plane2.pcd  plane4.pcd  plane5.pcd  rest2.pcd  rest3.pcd  rest4.pcd  rest5.pcd
perception/segment/: CMakeLists.txt  pcl_iterRANSAC.cpp
perception/visualizer/: CMakeLists.txt  pcl_visualizer.cpp
scripts/: high_level_control_with_pointcloud.sh  low_level_control.sh  planning_test_with_pointcloud.sh  planning_visualization.rviz
(+39 files in other folders)
